--- a/src/pages/results/results.html
+++ b/src/pages/results/results.html
@@ -27,8 +27,8 @@
 
     <!-- styles components -->
     <link rel="stylesheet" href="../../components/mainNavBar/mainNavBar.css" />
+    <link rel="stylesheet" href="../../components/moviesByTheme/moviesByTheme.css" />
 </head>
 <body>
-    
 </body>
 </html>
