moviesByTheme.js: adds an alternative release date to the movie/series this alternative is to access the release date of the first episode of a series; peopleList.js: removes variable naming errors; results.html: adds css link to people list section; results.js:adds the result list sections called: recommended movies, recommended series, recommended actors, trending movies, trending series, trending people

--- a/src/pages/results/results.html
+++ b/src/pages/results/results.html
@@ -28,6 +28,7 @@
     <!-- styles components -->
     <link rel="stylesheet" href="../../components/mainNavBar/mainNavBar.css" />
     <link rel="stylesheet" href="../../components/moviesByTheme/moviesByTheme.css" />
+    <link rel="stylesheet" href="../../components/peopleList/peopleList.css" />
 </head>
 <body>
 </body>
