--- a/src/pages/results/results.html
+++ b/src/pages/results/results.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="../../components/mainNavBar/mainNavBar.css" />
     <link rel="stylesheet" href="../../components/moviesByTheme/moviesByTheme.css" />
     <link rel="stylesheet" href="../../components/peopleList/peopleList.css" />
+    <link rel="stylesheet" href="../../components/footer/footer.css" />
 </head>
 <body>
 </body>
